Fix variant management in server mode
Signed-off-by: Geoffroy Jamgotchian <geoffroy.jamgotchian@rte-france.com>